--- a/多线程.md
+++ b/多线程.md
@@ -126,7 +126,8 @@ if __name__ == '__main__':
     print(num)  #结果会是0
 ```
 
-# 多线程通信 Queue
+# 多线程通信 
+## 使用消息队列Queue
 ```python
 from queue import Queue
 import threading
@@ -167,3 +168,299 @@ if __name__ == '__main__':
 - 多线程缺点:稳定性较差，一个崩溃后会影响整个进程。
 
 - 多线程适用场景:适合IO密集型任务，比如文件读取以及爬虫等操作。
+
+## 使用Event事件对象
+先创建线程，但不是立马执行，需要等待Event事件触发后，一起执行
+
+- `event = threading.Event()` 创建Event对象
+
+- `event.clear()` 重置代码中的event对象，使得所有该event事件都处于待命状态
+
+- `event.wait()`  阻塞线程，等待event指令
+
+- `event.set()`  发送evnet指令，使得所有设置该event事件的线程执行
+
+
+
+```python
+#自定义类，继承于Thread
+class MyThread(threading.Thread):
+    #添加event属性
+    def __init__(self, event):
+        super().__init__()
+        self.event = event
+
+    #重写父类的run方法
+    def run(self):
+        print(f"线程{self.name}已经初始化完成，随时准备启动...")
+
+        # 设置线程等待,阻塞线程
+        self.event.wait()
+        print(f"{self.name}开始执行...")
+
+if __name__ == '__main__':
+    #创建event对象
+    event = threading.Event()
+
+    threads = []
+    # 创建10个自定义线程对象
+    [threads.append(MyThread(event)) for i in range(1, 11)]
+
+    #重置event对象
+    event.clear()
+
+    #开启所有线程
+    [t.start() for t in threads]
+    time.sleep(5)
+
+    #触发事件
+    event.set()
+    [t.join() for t in threads]
+```
+
+## 使用Condition对象
+适合线程需要轮流进行的情况
+
+```python
+import threading
+
+# 新建一个condition对象
+cond = threading.Condition()
+
+#自定义线程
+class Kongbaige(threading.Thread):
+    def __init__(self, cond, name):
+        threading.Thread.__init__(self, name=name)
+        self.cond = cond
+
+    def run(self):
+        self.cond.acquire()  # 获取锁
+
+        print(self.getName() + ": 一支穿云箭")  # 空白哥说了第一句话
+        self.cond.notify()   # 唤醒其他wait状态的线程（通知西米哥说话）
+        self.cond.wait()    # 进入wait线程挂起状态等待notify通知
+
+        print(self.getName() + ": 山无楞，天地合，乃敢与君决")
+        self.cond.notify()  # 唤醒其他wait状态的线程（通知西米哥说话）
+        self.cond.wait()
+
+        print(self.getName() + ": 紫薇")
+        self.cond.notify()  # 唤醒其他wait状态的线程（通知西米哥说话）
+        self.cond.wait()
+
+        print(self.getName() + ": 是你")
+        self.cond.notify()  # 唤醒其他wait状态的线程（通知西米哥说话）
+        self.cond.wait()
+
+        print(self.getName() + ": 有钱吗，借点？")
+        self.cond.notify()
+        self.cond.release()  # 释放锁
+
+#自定义线程
+class Ximige(threading.Thread):
+
+    def __init__(self, cond, name):
+        threading.Thread.__init__(self, name=name)
+        self.cond = cond
+
+    def run(self):
+        self.cond.acquire() #获取锁
+        self.cond.wait()
+
+        print(self.getName() + ": 千军万马来相见")
+        self.cond.notify()
+        self.cond.wait()
+
+        print(self.getName() + ": 海可枯，石可烂，激情永不散")
+        self.cond.notify()
+        self.cond.wait()
+
+        print(self.getName() + ": 尔康")
+        self.cond.notify()
+        self.cond.wait()
+
+        print(self.getName() + ": 是我")
+        self.cond.notify()
+        self.cond.wait()
+
+        print(self.getName() + ": 滚")
+        self.cond.release()  #释放锁
+
+if __name__ == '__main__':
+    kongbai = Kongbaige(cond, '空白哥')
+    ximige = Ximige(cond, '西米哥')
+    # 虽然是空白哥先说话，但是并不能让他先启动。
+    # 因为空白哥启动后，发出notify指令，而西米哥可能还未启动，导致notify指令无法接收，
+    # 西米哥会一直处于等待状态
+    ximige.start()
+    kongbai.start()
+```
+
+# 消息隔离
+使用一个threading.local变量，在不同的线程中有不同的值
+```python
+import threading
+
+local_data = threading.local() #线程内的全局变量
+
+local_data.name = 'local_data' #设置name属性
+
+class MyThread(threading.Thread):
+    def run(self):
+        #__dict__是一个字典，键为属性名，值为属性值
+        print('赋值前-子线程：', threading.currentThread(), local_data.__dict__)  
+        # 在子线程中修改local_data.name的值
+        local_data.name = self.getName()  # self.getName()获取当前线程名字
+        print('赋值后-子线程：', threading.currentThread(), local_data.__dict__)
+
+if __name__ == '__main__':
+    print('开始前-主线程：', local_data.__dict__)
+
+    t1 = MyThread()
+    t1.start()
+    t1.join()
+
+    t2 = MyThread()
+    t2.start()
+    t2.join()
+
+    print('结束后-主线程：', local_data.__dict__)
+```
+
+# 线程池
+与单独创建多线程不同，主线程开始后会创建线程池（有最大线程数限制），每当有任务需要进行，会分配线程进行操作，任务执行完成后，线程被回收进线程池。避免重复的创建和销毁线程。
+
+```python
+from concurrent.futures import ThreadPoolExecutor
+import time
+
+# 创建一个新的线程池对象，并且指定线程池中最大的线程数为3
+executor = ThreadPoolExecutor(max_workers=3)
+
+def get_html(times):
+    time.sleep(times)
+    print(f'获取网页信息{times}完毕')
+    return times
+
+# 通过submit方法提交执行的函数到线程池中，submit函数会立即返回，不阻塞主线程
+# submit提交到线程池，提交了4个，大于线程池最大线程数，会等待有空闲的线程再分配给新任务
+task1 = executor.submit(get_html, 5)
+task2 = executor.submit(get_html, 2)
+task3 = executor.submit(get_html, 3)
+task4 = executor.submit(get_html, 2)
+```
+
+- `task1.done()` 检查线程执行成功与否  成功返回True，失败返回False
+- `task4.cancel()` 取消线程任务执行（前提是当前线程还未被submit到线程池，如果线程已经被提交到线程池中则取消失败）  取消成功返回True，失败返回False
+- `task1.result()` 获取返回值  该方法为阻塞方法（拿到返回值之后才会继续往下执行）
+
+## as_completed方法
+会打印最先完成任务的线程，不管哪个线程先提交
+```python
+from concurrent.futures import ThreadPoolExecutor, as_completed
+import time
+
+# 创建一个新的线程池对象，并且指定线程池中最大的线程数为3
+executor = ThreadPoolExecutor(max_workers=3)
+
+def get_html(times):
+    time.sleep(times)
+    print(f'获取网页信息{times}完毕')
+    return times
+
+urls = [4,2,3]  # 通过urls列表模拟要抓取的url
+
+# 通过列表推导式构造多线程任务
+all_task = [executor.submit(get_html, url) for url in urls]
+
+for item in as_completed(all_task):  # as_completed是一个生成器，阻塞，会打印最先完成任务的线程
+    data = item.result()
+    print(f"主线程中获取任务的返回值是{data}")
+```
+
+## map方法
+会按照提交顺序打印结果，不管哪个线程先执行完 <br> 
+且自动提交线程到线程池
+```python
+from concurrent.futures import ThreadPoolExecutor, as_completed
+import time
+
+# 创建一个新的线程池对象，并且指定线程池中最大的线程数为3
+executor = ThreadPoolExecutor(max_workers=3)
+
+def get_html(times):
+    time.sleep(times)
+    print(f'获取网页信息{times}完毕')
+    return times
+
+urls = [4,2,3]  # 通过urls列表模拟要抓取的url
+
+#map方法 把urls自动映射到get_html，且自动提交
+for data in executor.map(get_html, urls):
+    print("主线程中获取任务的返回值是{}".format(data))
+```
+
+## wait方法
+阻塞主线程
+```python
+from concurrent.futures import ThreadPoolExecutor, wait, ALL_COMPLETED, FIRST_COMPLETED
+import time
+
+# 创建一个新的线程池对象，并且指定线程池中最大的线程数为3
+executor = ThreadPoolExecutor(max_workers=3)
+
+def get_html(times):
+    time.sleep(times)
+    print(f'获取网页信息{times}完毕')
+    return times
+
+urls = [4,2,3]  # 通过urls列表模拟要抓取的url
+
+#通过列表推导式构造多线程任务
+all_task = [executor.submit(get_html, url) for url in urls]
+
+wait(all_task, return_when=ALL_COMPLETED)  # 让主线程阻塞，直到指定的条件成立
+
+print('代码执行完毕')
+```
+wait条件
+- `ALL_COMPLETED` 所有任务线程都执行完毕后继续执行主线程
+- `FIRST_COMPLETED` 只要有一个任务线程执行完毕就继续执行主线程
+
+# 线程信号量
+原理：设置锁的数量，所以最多有设定数量的线程在执行，其他线程等待
+```python
+import threading, time
+
+
+#模拟网络爬虫
+class HtmlSpider(threading.Thread):
+    def __init__(self, url, sem):
+        super().__init__()
+        self.url = url
+        self.sem = sem
+
+    def run(self):
+        time.sleep(2)  # 模拟网络等待
+        print(f'{self.url},获取网页内容成功！')
+        self.sem.release()  # 爬取完毕释放锁资源
+
+
+class UrlProducer(threading.Thread):
+
+    def __init__(self, sem):
+        super().__init__()
+        self.sem = sem
+
+    def run(self):
+        for i in range(20):
+            self.sem.acquire()  # 先获取锁再执行线程
+            html_thread = HtmlSpider(f'http://www.baidu.com/{i}', self.sem)
+            html_thread.start()
+
+if __name__ == '__main__':
+    #设置线程信号量为5，即同时最多执行5个线程
+    sem = threading.Semaphore(value=5)
+    url_producer = UrlProducer(sem)
+    url_producer.start()
+```
