--- a/多进程.md
+++ b/多进程.md
@@ -73,3 +73,55 @@ if __name__ == '__main__':
 
 - 多进程适用场景:对于计算密集型任务，比较适合多进程。
 
+# 进程池
+- 可以使用线程池的方法，即concurrent_futures模块的ProcessPoolExcutor，接口和线程池一致，只是名字从Thread变成了Process
+
+- 也可以使用multiprocessing模块的Pool类来实现进程池
+
+## 在进程池中创建单个进程
+```python
+import multiprocessing
+import time
+
+def get_html(n):
+    time.sleep(n)
+    print(f"{n}子进程获取内容成功")
+    return n
+
+if __name__ == '__main__':
+    # 通过cpu_count获取当前cpu的核心数
+    pool = multiprocessing.Pool(multiprocessing.cpu_count())
+    #异步调用
+    result = pool.apply_async(get_html, args=(3,))
+    
+    pool.close()  # 这个方法必须在join前调用
+    pool.join()   # 阻塞主进程代码
+    
+    print(result.get())   # 拿到子进程执行的结果
+    print("end")
+```
+
+## 在进程池中创建多个进程
+- `imap`方法按照提交顺序返回，不管哪个进程先执行完
+```python
+import multiprocessing
+import time
+
+def get_html(n):
+    time.sleep(n)
+    print("{}子进程获取内容成功".format(n))
+    return n
+
+if __name__ == '__main__':
+    # 通过cpu_count获取当前主机的核心数
+    pool = multiprocessing.Pool(multiprocessing.cpu_count())
+
+    for result in pool.imap(get_html, [4, 3, 2]):
+        print(f"{result}休眠执行成功！")
+
+```
+- `imap_unordered` 方法 ，谁先执行完先返回谁
+```python
+for result in pool.imap_unordered(get_html, [4, 3, 2]):
+    print(f"{result}休眠执行成功！")
+```
