--- a/装饰器和闭包.md
+++ b/装饰器和闭包.md
@@ -1,4 +1,105 @@
-# 装饰器 和 闭包
+# 闭包
+
+## 全局变量 和 局部变量
+- 全局变量：`全局作用域（函数外）` 和 `局部作用域（函数内）` 都可以访问
+
+- 局部变量：只能在 `当前局部作用域（当前函数内）` 访问 （垃圾回收机制，函数结束且引用计数器为0，也就是没有其他变量来引用，这时计算机会认为该变量已经没有利用价值，所以被回收）
+
+## 闭包的作用
+函数执行完后，依然在内存空间中保留局部变量
+
+```python
+'''
+闭包程序三步走：① 有函数嵌套 ② 有内层函数有引用 ③ 有返回内层函数地址
+'''
+def outer():
+    num = 100  # 局部变量
+    def inner():
+        print(num)  # 这里在inner中引用了num
+    return inner
+
+fn = outer()  
+# 执行outer()，返回 inner，即 fn = inner，但此时num没有被回收。
+# 因为 fn引用了inner，inner中又引用了num，所以num和inner的引用计数器都还不是0，还有利用价值，所以不会被回收
+fn() # 相当于 调用inner()
+```
+
+## global 和 nonlocal
+- global 只能使用在函数内部，声明全局变量
+```python
+num = 10  # 全局变量
+def func():
+    global num  # 在函数内要修改全局变量的值，使用global关键字声明
+    num = 100
+func()
+print(num)
+```
+
+- nonlocal 声明离他最近的外层的局部变量，在内层函数中修改外层局部变量
+```python
+def outer():
+    num = 10  # 外层局部变量
+    def inner():
+        nonlocal num  # 声明该num是离他最近的外层局部变量
+        num = 100     # 在内层函数中修改外层局部变量
+    inner()
+    print(num)
+
+outer() # 程序入口
+```
+
+## 综合案例
+```python
+def func():
+    result = 0
+    def inner(num):
+        nonlocal result
+        result += num
+        print(result)
+    return inner
+
+f = func()
+f(1)  # 1
+f(2)  # 3
+f(3)  # 6
+```
+# 装饰器
+
+在不改变现有函数源代码以及函数调用方式的前提下，实现给函数增加额外的功能。
+
+装饰器的本质就是一个`闭包函数`
+
+## 普通装饰器  获取程序执行时间
+```python
+'''
+定义获取程序的执行时间装饰器 => 闭包（① 有嵌套 ② 有引用 ③ 有返回）
+装饰器：本质是一个闭包，有嵌套、有引用、有返回（返回的是函数的内存地址）
+参数fn在check中也是一个局部变量
+参数fn：就是要装饰的函数的函数名，如comment，如download
+'''
+import time
+
+def get_time(fn):  # ！！！一般默认传入fn作为参数
+    def inner():
+        # ① 添加装饰器修饰功能（获取程序的执行时间）
+        begin = time.time()
+        # ② 调用fn函数，执行原函数代码
+        fn()
+        end = time.time()
+        print(f'这个函数的执行时间：{end - begin}')
+    return inner  # 返回内层函数
+
+
+@get_time
+def demo():
+    for i in range(1000000):
+        print(i)
+
+demo()
+```
+
+
+
 
 ## 装饰器通用方法(被装饰函数带参数或不带参数)
 ``` python 
@@ -88,34 +189,8 @@ def foo(name, age):
 print(foo('woniu', 11) ) 
 ```
 
-## 闭包
-```python
-#lst用于存储不同的函数对象
-lst =  []
 
-for i , j in [(1,2),(3,4),(5,6)]:
-    def deco(i):    
-        b = j
-        def myfunc(a):
-            #内层函数myfunc使用了外层函数deco的b
-            print(b)
-            #内层函数myfunc使用了外层函数deco的i
-            return i+a  
-        return myfunc
-    #每一次迭代，因为i的不同，都会在列表里添加不同i值下的myfunc实例(deco的return是myfunc)
-    #
-    lst.append(deco(i))
-    
-#遍历不同的函数对象
-for i in lst:
-    #针对每个函数对象都传入1
-    #相当于 执行三次myfunc(1)，但每次的myfunc是不同的实例
-    #第一次:b=2, i=1
-    #第一次:b=4, i=3
-    #第一次:b=6, i=5
-    print(i(1))
-
-```
+## 装饰器 和 闭包的比较
 ||装饰器(decorator)|闭包(closure)|
 |:---:|:---|:---|
 |相同点|1.都是函数的嵌套，分为外层函数和内层函数，而且外层函数要返回内层函数 <br/> 2.代码实现逻辑大同小异 <br/> 3.二者都可以实现增加额外功能的目的|<|
