--- a/类.md
+++ b/类.md
@@ -38,7 +38,42 @@
 
 # 封装中的私有属性和私有方法
 
-**类中的私有属性和私有方法，不能被其子类继承。**
+**类中的私有属性和私有方法，不能被其子类继承。（其实只是私有方法改名了）**
+
+**每个类的私有属性和方法都会根据`!!定义它们的类!!`进行名称改写。(多层继承 和 多继承 中通用)**
+```python
+class Parent:
+    def __init__(self):
+        self.__private_attribute = "I am private"
+        self.__name = "liu"
+
+    def __private_method(self):
+        print("父类Parent私有方法！")
+
+class Child(Parent):
+    def __init__(self):
+        super().__init__()
+        self.__age = 5
+
+    def __private_method(self):
+        print("父类Child私有方法！")
+    
+class Baby(Child):
+    def __init__(self):
+        super().__init__()
+
+        # 通过名称改写后的形式访问私有属性
+        print(self._Parent__private_attribute)  # "I am private"
+        print(self._Parent__name)               # "liu"
+
+        print(self._Child__age)                 # 5
+
+        self._Parent__private_method()          # "父类Parent私有方法！"
+        self._Child__private_method()           # "父类Child私有方法！"
+
+# 创建子类对象
+baby = Baby()
+```
 
 ## 私有属性的访问限制
 
@@ -355,7 +390,34 @@ t3 = Tool('铁锹')
 
 Tool.get_count()
 ```
+## 例子
+```python
+class Parent:
+    class_attribute = "I am a class attribute"
 
+class Child(Parent):
+    pass
+
+# 创建子类对象
+child = Child()
+
+# 访问子类的类属性，两种方式访问
+print(Child.class_attribute)  # 输出: I am a class attribute
+print(child.class_attribute)  # 输出: I am a class attribute
+
+# 修改子类的类属性
+Child.class_attribute = "Modified by Child"
+print(Parent.class_attribute)  # 输出: I am a class attribute
+print(Child.class_attribute)   # 输出: Modified by Child
+print(child.class_attribute)   # 输出: Modified by Child
+
+# 修改父类的类属性
+Parent.class_attribute = "Modified by Parent"
+print(Parent.class_attribute)  # 输出: Modified by Parent
+print(Child.class_attribute)   # 输出: Modified by Child
+print(child.class_attribute)   # 输出: Modified by Child
+
+```
 ## 有继承情况 的 类方法
 
 - 没有重写
