--- a/装饰器和闭包.md
+++ b/装饰器和闭包.md
@@ -90,7 +90,7 @@ def get_time(fn):  # ！！！一般默认传入fn作为参数
     return inner  # 返回内层函数
 
 
-@get_time
+@get_time  # demo = get_time(demo)
 def demo():
     for i in range(1000000):
         print(i)
@@ -99,30 +99,29 @@ demo()
 ```
 
 
-
-
-## 装饰器通用方法(被装饰函数带参数或不带参数)
+## 装饰器`通用`方法(被装饰函数带参数或不带参数)
 ``` python 
 import time
 
 #测定任意函数的执行时间的装饰器
 def timer(func):
     # 通过提供不定量参数来自适应被装饰函数的参数
-    def wrapper(*args, **kwargs):  
+    def wrapper(*args, **kwargs):  # !注意内层函数要传参
         start_time = time.time()
-        func(*args, **kwargs)
+        result = func(*args, **kwargs)      # ！调用实际函数时也要传参，且接受返回值
         end_time = time.time()
         print('func运行的时间为：', end_time - start_time)
+        return result   # 内层函数返回值
     return wrapper
 
  # 这里相当于执行了foo=timer(foo) 也就是 foo = wrapper
 @timer   
 def foo(name, age):
-    time.sleep(3)
+    time.sleep(3) 
     print('in foo', name, age)
 
 # 这里调用foo(),实际上是调用 wrapper(*args, **kwargs)
-foo('woniu', 11)  
+result = foo('woniu', 11)  
 ```
 
 ## 装饰器函数带参数
@@ -130,10 +129,10 @@ foo('woniu', 11)
 import time
 
 #测定任意函数的执行时间的装饰器
-def timer(timer_type):
-    print(timer_type)
+def timer(timer_type):   #最外层函数用来接受参数
     def outer(func):
         def inner(*args, **kwargs):
+            print(timer_type)
             start_time = time.time()
             func(*args, **kwargs)
             end_time = time.time()
@@ -188,6 +187,90 @@ def foo(name, age):
 # 这里调用foo(),实际上是调用 wrapper(*args, **kwargs)
 print(foo('woniu', 11) ) 
 ```
+
+
+# 类装饰器
+
+
+装饰器还有一种特殊的用法就是类装饰器，就是通过定义一个类来装饰函数。
+
+```python
+class 类装饰器():
+    # 装饰器代码
+
+@类装饰器名称
+def 函数():
+    # 函数代码
+```
+
+举个栗子：编写一个Check类装饰器，用于实现用户的权限验证
+
+```python
+'''
+类装饰器编写规则：
+① 必须有一个__init__初始化方法，用于接收要装饰函数的函数 
+② 必须把这个类转换为可以调用的函数
+问题：如何把一个类当做一个装饰器函数进行调用（把类当做函数）
+'''
+
+class Check():
+    def __init__(self, fn):
+        # fn就是要修饰函数的名称，当Check装饰器类被调用时，系统会自动把comment函数名称传递给fn变量
+        self.__fn = fn
+    # __call__方法：把一个类转换为函数的形式进行调用
+    def __call__(self, *args, **kwargs):
+        # 编写装饰器代码
+        print('请先登录')
+        # 调用comment函数本身
+        self.__fn(*args, **kwargs)
+
+# 编写一个函数，用于实现评论功能，底层comment = Check(comment)
+@Check
+def comment():
+    print('评论功能')
+
+# 调用comment函数，实现评论功能
+comment()
+```
+
+> @Check 等价于 comment = Check(comment), 所以需要提供一个**init**方法，并多增加一个fn参数。这时comment实际上是Check类的一个实例
+>
+> 要想类的实例对象能够像函数一样调用，需要在类里面使用**`__call__`**方法，把类的实例变成可调用对象(callable)，也就是说可以像调用函数一样进行调用。
+>
+> 在**`__call__`**方法里进行对fn函数的装饰，可以添加额外的功能。
+
+
+## 类装饰器带参数，需要使用工厂函数
+```python
+class DecoratorWithArgs:
+    def __init__(self, arg1, arg2):
+        self.arg1 = arg1
+        self.arg2 = arg2
+
+    def __call__(self, func):
+        def wrapped_func(*args, **kwargs):
+            print(f"Before calling {func.__name__}, using arguments {self.arg1} and {self.arg2}")
+            result = func(*args, **kwargs)
+            print(f"After calling {func.__name__}")
+            return result
+        return wrapped_func
+
+# 创建一个装饰器工厂函数
+def decorator_factory(arg1, arg2):
+    return DecoratorWithArgs(arg1, arg2)
+
+# 使用带参数的装饰器
+# @: say_hello = decorator_factory("parameter1", "parameter2")(say_hello)
+# say_hello = 类装饰器实例(say_hello)，即调用实例的__call__方法
+# say_hello = wrapped_func
+@decorator_factory("parameter1", "parameter2") 
+def say_hello(name):
+    print(f"Hello, {name}!")
+
+# 调用装饰后的函数
+say_hello("Alice")  # 实际上调用的是wrapped_func
+```
+
 
 
 ## 装饰器 和 闭包的比较
