--- a/装饰器和闭包.md
+++ b/装饰器和闭包.md
@@ -188,9 +188,46 @@ def foo(name, age):
 print(foo('woniu', 11) ) 
 ```
 
+## 多层装饰器 (有装饰顺序)
+```python
+def decorator_one(func):
+    def wrapper(*args, **kwargs):
+        print("Decorator One: Before the function call")
+        result = func(*args, **kwargs)
+        print("Decorator One: After the function call")
+        return result
+    return wrapper
+
+def decorator_two(func):
+    def wrapper(*args, **kwargs):
+        print("Decorator Two: Before the function call")
+        result = func(*args, **kwargs)
+        print("Decorator Two: After the function call")
+        return result
+    return wrapper
+
+@decorator_one
+@decorator_two
+def my_function(x, y):  # my_function = decorator_one(decorator_two(my_function)) 有装饰顺序
+    print(f"Function called with arguments: {x}, {y}")
+    return x + y
+
+# 调用函数
+result = my_function(3, 4)
+print(f"Result: {result}")
+
+
+# 输出
+# Decorator One: Before the function call
+# Decorator Two: Before the function call
+# Function called with arguments: 3, 4
+# Decorator Two: After the function call
+# Decorator One: After the function call
+# Result: 7
+```
+
 
 # 类装饰器
-
 
 装饰器还有一种特殊的用法就是类装饰器，就是通过定义一个类来装饰函数。
 
