--- a/多线程.md
+++ b/多线程.md
@@ -1,4 +1,4 @@
-# 线程
+# 多线程(并发) 偏IO型任务：文件读写和网络
 ```python
 import threading
 
@@ -6,16 +6,22 @@ def get_web(name):
     print('get web according',name)
 
 if __name__ == '__main__':
-    #创建两个子线程，target为函数引用
+    #创建两个子线程，target为函数引用，传参args和kwagrs都可以
     t1 = threading.Thread(target=get_web,args=('baidu',))
     t2 = threading.Thread(target=get_web,args=('tengxun',))
 
 
     #默认情况下，主线程会等待所有子线程执行结束
+
     #setDaemon方法 设置守护进程,再start之前
     #即主线程一旦结束，所有子线程没有运行完也全部结束
+    #有两种方法
+    #方法一：
     t1.setDaemon(True)
     t2.setDaemon(True)
+
+    #方法二：在定义的时候设置
+    # t1 = threading.Thread(target=get_web,args=('baidu',), daemon = True)
 
     #启动线程
     t1.start()
@@ -28,6 +34,9 @@ if __name__ == '__main__':
 
     print('程序运行结束')
 ```
+
+- 和多进程不同，多线程由于是源于同一个进程，所有共享该进程的资源，所以共享全局变量
+- 线程之间的执行是无序的
 
 # 锁
 只有拿到锁的线程才能对进程的共享资源进行操作
