--- a/多进程.md
+++ b/多进程.md
@@ -1,4 +1,4 @@
-# 进程
+# 多进程(并行)  偏cpu计算任务
 ```python
 import multiprocessing
 
@@ -6,11 +6,12 @@ def get_web(name):
     print('get web according',name)
 
 if __name__ == '__main__':
-    #创建两个进程，target为函数引用
+    #创建两个进程，target为函数引用,args位置参数，也可以使用kwargs字典方式传参
     p1 = multiprocessing.Process(target=get_web,args=('baidu',))
     p2 = multiprocessing.Process(target=get_web,args=('tengxun',))
 
     #默认情况下，主进程会等待所有子进程执行结束
+
     #setDaemon方法 设置守护进程,再start之前
     #即主线程一旦结束，所有子线程没有运行完也全部结束
     p1.daemon = True
@@ -27,12 +28,62 @@ if __name__ == '__main__':
 
     print('程序运行结束')
 ```
+- 传参两种方式 args和kwargs 和线程一样
+    - music_process = multiprocessing.Process(target=music, args=(3, ))
+    - coding_process = multiprocessing.Process(target=coding, kwargs={'count': 3})
 - `import os`
 - `os.getpid()` 获取进程编号
 - `os.getppid()` 获取父进程编号
+- `os.kill(进程pid, 信号) `
+    - 信号 9 : 强制结束
+    - 信号 15 ： 通知该进程正常结束 
+
+- `子进程名.terminate() ` 强制销毁子进程，效果和守护进程一样
+-------------------------------------------------------------
+<br>
+当你使用 multiprocessing 模块在 Python 中创建和启动进程时，必须将进程创建和启动代码放在 `if __name__ == '__main__'`: 保护块中。这在 Windows 和 macOS 上尤其重要，因为这些操作系统在创建新进程时会重新导入模块，并执行顶层代码。这意味着，如果你不使用 `if __name__ == '__main__'`: 保护块，子进程会再次执行整个脚本，导致递归创建新进程。无限递归？<br>
+
+
+- 有`if __name__ == '__main__'`的情况:
+```python
+from multiprocessing import Process
+import time 
+
+def task():
+    for i in range(4):
+        print(i)
+        time.sleep(1)     
+
+if __name__ == '__main__':
+    p  = Process(target=task)
+    p.start()
+```
+
+当 `p.start()` 被调用时，子进程重新导入当前模块，但由于子进程不是从 `__main__` 启动的，`if __name__ == '__main__'`: 块内的代码不会被执行。这防止了无限递归创建子进程的情况。
+
+- 没有`if __name__ == '__main__'`的情况:
+```python
+from multiprocessing import Process
+import time 
+
+def task():
+    for i in range(4):
+        print(i)
+        time.sleep(1)     
+
+# 没有 `if __name__ == '__main__':` 保护块
+p  = Process(target=task)
+p.start()
+```
+在 Windows 上，当 `p.start()` 被调用时，Python 会重新导入当前模块，以便在子进程中运行 task 函数。
+因为没有 `if __name__ == '__main__'`: 保护块，子进程重新导入模块时，会再次执行所有顶层代码，包括 `p = Process(target=task)` 和 `p.start()`。这导致子进程又创建了一个新的子进程，这个新的子进程再次执行顶层代码，依此类推，导致无限递归创建子进程，最终导致系统资源耗尽，程序崩溃。
 
 
 # 多进程通信
+
+创建子进程会对主进程资源进行拷贝，也就是说子进程是主进程的一个副本，好比是一对双胞胎，之所以`进程之间不共享全局变量`，只不过不同进程里面的全局变量名字相同而已。
+
+每个进程分别操作的都是自己进程里面的全局变量, 不会对其它进程里面的全局变量产生影响，所以进程之间不共享全局变量，只不过进程之间的全局变量名字相同而已。
 
 ```python
 import multiprocessing
