--- a/可迭代对象和迭代器和生成器.md
+++ b/可迭代对象和迭代器和生成器.md
@@ -120,7 +120,22 @@ g.send('nihao')
 
 ## 创建生成器
 - `yield`
-- `a = (i for i in range(10))`
+- `a = (i for i in range(10))` 生成器推导式
+
+## 多重赋值（multiple assignment）
+```python
+# 多重赋值
+a, b = b, a + b
+
+# 意思看上去一样，但实际不一样
+a = b
+b = a + b
+```
+多重赋值在同一时刻评估右边的所有表达式，并在评估完成后一次性将结果赋值给左边的变量。
+
+计算右边的表达式：先计算 b，再计算 a + b。
+
+将计算结果赋值给左边的变量：a 被赋值为 b 的值，b 被赋值为 a + b 的值。
 
 
 # 协程
